--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -14,8 +14,54 @@
             }
 
             .pad{
-                padding: 10%;
+                padding-top: 10%;
+                padding-left: 30%;
+                padding-right: 30%;
             }
+
+            .button {
+                border: none;
+                color: white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                transition-duration: 0.4s;
+                cursor: pointer;
+                background-color: white; 
+                color: black; 
+                border: 2px solid rgb(80, 80, 80);
+                }
+                
+            .button:hover {
+                background-color: rgb(80, 80, 80);
+                color: white;
+            }
+
+            input {
+            border: 1px solid transparent;
+            background-color: #f1f1f1;
+            padding: 10px;
+            font-size: 16px;
+            }
+
+            input[type=text] {
+            background-color: #f1f1f1;
+            width: 30%;
+            }
+            input[type=password] {
+            background-color: #f1f1f1;
+            width: 30%;
+            }
+
+            input[type=submit] {
+            background-color: rgb(80, 80, 80);
+            color: #fff;
+            cursor: pointer;
+            }
+
         </style>
     </head>
 
@@ -26,22 +72,17 @@
             <h1>Zaloguj się</h1>
             
             <form method="POST", action='/logIn' enctype="multipart/form-data">
-                <label for="username">Nazwa użytkownika</label>
+                <label for="username">Nazwa użytkownika:</label><br>
                 <input type="text" id="username" name="username">
                 <br><br>
-                <label for="password">Hasło</label>
+                <label for="password">Hasło:</label><br>
                 <input type="password" id="password" name="password">
                 <br><br>
-                <input type="submit" value="Zaloguj">
+                <input class="button" type="submit" value="Zaloguj">
             </form>
             <br>
-            <!--
-            <a href="register_page">
-                <button class="btn btn-primary btn-lg">Zarejestruj się</button>
-            </a>
-            -->
             <a href="/">
-                <button class="btn btn-primary btn-lg">Powrót</button>
+                <button class="button">Powrót</button>
             </a>
         </div>
 
