--- a/templates/admin_start_page.html
+++ b/templates/admin_start_page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         
-        <title>Logowanie</title>
+        <title>Admin</title>
         
         <style>
             .center {
@@ -26,7 +26,7 @@
 
         <div>
             <h1></h1>
-            <a href="reservations">
+            <a href="admin_start_page/reservations">
                 <button class="btn btn-primary btn-lg">Wyświetl rezerwacje</button>
             </a>
             <br><br>
