--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -121,7 +121,7 @@
                     <div class="autocomplete" style="width:300px;">
                         <input type="search" id="csearch" name="csearch">
                     </div>
-                    <input type="submit">
+                    <input type="submit" value="Szukaj">
                 </form>
                 <br>
             </div>
