--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -62,6 +62,17 @@
             cursor: pointer;
             }
 
+            input[type=submit] {
+            background-color: rgb(124, 124, 124);
+            color: #fff;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border: 2px solid rgb(80, 80, 80);
+            }
+            input[type=submit]:hover {
+                border: 2px solid rgb(0, 0, 0);
+            }
+
         </style>
     </head>
 
