--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -56,9 +56,16 @@
             }
 
             input[type=submit] {
-            background-color: rgb(80, 80, 80);
+            background-color: rgb(124, 124, 124);
             color: #fff;
+            transition-duration: 0.4s;
             cursor: pointer;
+            border: 2px solid rgb(80, 80, 80);
+            }
+
+            input[type=submit]:hover {
+                background-color: rgb(80, 80, 80);
+                border: 2px solid rgb(0, 0, 0);
             }
         </style>
     </head>
