--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -6,6 +6,10 @@
         <title>Logowanie</title>
         
         <style>
+            body{
+                font-family: arial, sans-serif;
+            }
+            
             .center {
                 margin: auto;
                 border: 3px solid #bebebe;
