--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -5,6 +5,10 @@
         <title>Rejestracja</title>
         
         <style>
+            body{
+                font-family: arial, sans-serif;
+            }
+            
             .center {
                 margin: auto;
                 border: 3px solid #bebebe;
