--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -47,6 +47,27 @@
                 color: white;
             }
 
+            .buttontransparent {
+                border: none;
+                color: white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                transition-duration: 0.4s;
+                cursor: pointer;
+                background-color: rgba(255, 255, 255, 0); 
+                color: black; 
+                border: 2px solid rgb(80, 80, 80);
+                }
+                
+            .buttontransparent:hover {
+                background-color: rgb(80, 80, 80);
+                color: white;
+            }
+
             /*the container must be positioned relative:*/
             .autocomplete {
                 position: relative;
@@ -161,6 +182,7 @@
                         <th>Skrzynia biegów</th>
                         <th>Cena za dobę</th>
                         <th>Miasto</th>
+                        <th></th>
                     </tr>
                     tabelatutaj
                 </table>
