--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -162,7 +162,7 @@
             <div>
                 <h1>Samochody</h1>
                 <p>Wyszukaj samochód:</p>
-                <form autocomplete="off" action="/search_cars.php">
+                <form autocomplete="off" action="/search_cars" method="post">
                     <div class="autocomplete" style="width:300px;">
                         <input type="search" id="csearch" name="csearch">
                     </div>
