--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -150,12 +150,8 @@
     <body>
 
         <div class="right">
-            <a href="login_page">
-                <button class="button">Zaloguj się</button>
-            </a>
-            <a href="register_page">
-                <button class="button">Zarejestruj się</button>
-            </a>
+            $logowanie
+            
         </div>
         <br>
         <div class="pad">
@@ -184,7 +180,7 @@
                         <th>Miasto</th>
                         <th></th>
                     </tr>
-                    tabelatutaj
+                    $tabela
                 </table>
             </div>
         </div>
