--- a/aplication/templates/start_page.html
+++ b/aplication/templates/start_page.html
@@ -285,10 +285,10 @@
             }
             
             /*An array containing all the country names in the world:*/
-            var countries = ["Audi", "BMW", "Citroen", "Fiat", "Ford", "Honda", "Hyundai", "Kia", "Mazda", "Mercedes", "Nissan", "Opel", "Peugeot", "Renault", "Seat", "Skoda", "Suzuki", "Toyota", "Volkswagen", "Volvo"];
+            var cars = [$autocompleteData];
             
             /*initiate the autocomplete function on the "myInput" element, and pass along the countries array as possible autocomplete values:*/
-            autocomplete(document.getElementById("csearch"), countries);
+            autocomplete(document.getElementById("csearch"), cars);
         </script>
     </body>
 </html>
