--- a/aplication/templates/aboutus.html
+++ b/aplication/templates/aboutus.html
@@ -103,9 +103,14 @@
         </div>
         <br>
         <div style="text-align: center">
-            <h1 style="color:rgb(80, 80, 80)"> Miasta, w których oferujemy wynajem</h1>
+            <h1 style="color:rgb(80, 80, 80)"> O nas</h1>
+            <p>Jesteśmy firmą zajmującą się wynajmem samochodów. blablabla przykładowy tekst</p>
+
             <br>
-            $citiesbuttons
+            <h1 style="color:rgb(80, 80, 80)">Kontakt</h1>
+            Telefon: $contactphonenr
+            <br>
+            Email: $contactemail
 
             
         </div>
