przechowywanie blob w bazie i poprawa wygladu

--- a/aplication/templates/admin/admin_car_list.html
+++ b/aplication/templates/admin/admin_car_list.html
@@ -43,10 +43,14 @@
                 <input type="text" id="fuel_type" name="fuel_type"><br><br>
                 <label for="gearbox_type">Skrzynia biegów</label><br>
                 <input type="text" id="gearbox_type" name="gearbox_type"><br><br>
-                <label for="price">cena</label><br>
+                <label for="price">Cena</label><br>
                 <input type="text" id="price" name="price"><br><br>
-                <label for="city">miasto</label><br>
+                <label for="city">Miasto</label><br>
                 <input type="text" id="city" name="city"><br><br>
+                <label for="city">Ilość aut</label><br>
+                <input type="text" id="nr_of_cars" name="nr_of_cars"><br><br>
+                <label for="img">Zdjęcie:</label>
+                <input type="file" id="img" name="img" accept="image/*"><br><br>
                 <input type="submit" value="Submit">
               </form> 
 
