--- a/aplication/templates/customer/offer.html
+++ b/aplication/templates/customer/offer.html
@@ -8,6 +8,8 @@
         <style>
             body{
                 font-family: arial, sans-serif;
+                background-position: center bottom;
+                background-repeat: no-repeat;
             }
 
             .center {
@@ -214,23 +216,10 @@
                 </form>
                 <br>
             </div>
-
-            <div>
-                <table>
-                    <tr>
-                        <th>Marka</th>
-                        <th>Model</th>
-                        <th>Typ samochodu</th>
-                        <th>Rok produkcji</th>
-                        <th>Typ paliwa</th>
-                        <th>Skrzynia biegów</th>
-                        <th>Cena za dobę</th>
-                        <th>Miasto</th>
-                        <th></th>
-                    </tr>
-                    $tabela
-                </table>
+                $tabela
             </div>
+
+            <br><br><br><br><br><br><br><br><br><br>
         </div>
 
 
