--- a/aplication/templates/customer/car_info.html
+++ b/aplication/templates/customer/car_info.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Rejestracja</title>
+        <title>$carname</title>
         
         <style>
             body{
@@ -104,7 +104,7 @@
             <h1>$carname</h1>
 
             <div id="first" style="margin-left: 10%;">
-                <img src="carimage.png" width="200%"/>
+                <img src="carimage.png" width="600px" />
             </div>
             <div id="seccond">
                 <table class="table_right">
