--- a/aplication/templates/customer/cities.html
+++ b/aplication/templates/customer/cities.html
@@ -48,23 +48,22 @@
                 color: white;
             }
 
-            .buttontransparent {
+            .button-big {
                 border: none;
                 color: white;
-                padding: 15px 32px;
+                padding: 20px 40px;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
-                font-size: 16px;
+                font-size: 27px;
                 margin: 4px 2px;
                 transition-duration: 0.4s;
                 cursor: pointer;
-                background-color: rgba(255, 255, 255, 0); 
+                background-color: #f1f1f1; 
                 color: black; 
-                border: 2px solid rgb(80, 80, 80);
                 }
                 
-            .buttontransparent:hover {
+            .button-big:hover {
                 background-color: rgb(80, 80, 80);
                 color: white;
             }
@@ -106,7 +105,6 @@
             <h1 style="color:rgb(80, 80, 80)"> Miasta, w których oferujemy wynajem</h1>
             <br>
             $citiesbuttons
-
             
         </div>
 
