--- a/aplication/templates/customer/start_page.html
+++ b/aplication/templates/customer/start_page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         
-        <title>Miasta</title>
+        <title>Strona główna</title>
         
         <style>
             body{
