--- a/aplication/templates/customer/profile_page.html
+++ b/aplication/templates/customer/profile_page.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Rejestracja</title>
+        <title>Profil</title>
         
         <style>
             body{
