--- a/aplication/templates/admin/admin_start_page.html
+++ b/aplication/templates/admin/admin_start_page.html
@@ -58,6 +58,10 @@
             <a href="admin/cars">
                 <button class="button-big">Zarządzaj samochodami</button>
             </a>
+            <br><br>
+            <a href="admin/send_message">
+                <button class="button-big">Wyślij wiadomość</button>
+            </a>
         </div>
 
     </body>
