--- a/aplication/templates/admin/send_message.html
+++ b/aplication/templates/admin/send_message.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Profil</title>
+        <title>Rejestracja</title>
         
         <style>
             body{
@@ -75,22 +75,23 @@
     </head>
 
 
-    <body>
+    <body class="pad">
 
         <div class="center">
-            <h1>Mój profil</h1>
+            <h1>Wyślij wiadomość</h1>
             
-            <a href="/data_edit" method="post">
-                <button class="button">Edytuj moje dane</button>
-            </a>
+            <form method="POST" , enctype="multipart/form-data" action='/send_message'>
+                <label for="username">Login odbiorcy:</label><br>
+                <input type="text" id="username" name="username">
+                <br><br>
+                <label for="content">Zawartość:</label><br>
+                <input type="content" id="content" name="content">
+                <br><br>
+                <input class="button" type="submit" value="Wyślij">
+              </form>
 
             <br>
-            <a href="/messages" method="post">
-                <button class="button">Wiadomości</button>
-            </a>
-
-            <br>
-            <a href="/">
+            <a href="/admin">
                 <button class="button">Powrót</button>
             </a>
         </div>
