--- a/aplication/templates/customer/messages.html
+++ b/aplication/templates/customer/messages.html
@@ -2,7 +2,8 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Profil</title>
+        
+        <title>Logowanie</title>
         
         <style>
             body{
@@ -17,9 +18,10 @@
             }
 
             .pad{
-                padding-top: 10%;
-                padding-left: 30%;
-                padding-right: 30%;
+                padding-top: 5%;
+                padding-bottom: 5%;
+                padding-left: 10%;
+                padding-right: 10%;
             }
 
             .button {
@@ -60,37 +62,35 @@
             }
 
             input[type=submit] {
+            background-color: rgb(80, 80, 80);
+            color: #fff;
+            cursor: pointer;
+            }
+
+            input[type=submit] {
             background-color: rgb(124, 124, 124);
             color: #fff;
             transition-duration: 0.4s;
             cursor: pointer;
             border: 2px solid rgb(80, 80, 80);
             }
-
             input[type=submit]:hover {
-                background-color: rgb(80, 80, 80);
                 border: 2px solid rgb(0, 0, 0);
             }
+
         </style>
     </head>
 
 
-    <body>
+    <body class="pad">
 
         <div class="center">
-            <h1>Mój profil</h1>
+            <h1>Wiadomości</h1>
             
-            <a href="/data_edit" method="post">
-                <button class="button">Edytuj moje dane</button>
-            </a>
+            $messages
+            <br><br><br>
 
-            <br>
-            <a href="/messages" method="post">
-                <button class="button">Wiadomości</button>
-            </a>
-
-            <br>
-            <a href="/">
+            <a href="/profile_page">
                 <button class="button">Powrót</button>
             </a>
         </div>
