poprawki w wyswietlaniu aut i filtrowaniu

--- a/aplication/templates/admin/add_car.html
+++ b/aplication/templates/admin/add_car.html
@@ -116,7 +116,7 @@
                 <label for="img">Zdjęcie</label>
                 <input type="file" id="img" name="img" accept="image/*"><br><br>
 
-                <input type="submit" value="Edytuj">
+                <input type="submit" value="Dodaj">
               </form> 
 
         </div>
