--- a/aplication/templates/admin/admin_car_list.html
+++ b/aplication/templates/admin/admin_car_list.html
@@ -109,7 +109,18 @@
                 $cartable
               </table>
 
+              <br><br>
+              <a href="add_car">
+                <button class="button">Dodaj samochód</button>
+            </a>
+    
+
         </div>
+
+        <a href="/admin">
+            <button class="button">Powrót</button>
+        </a>
+
 
     </body>
 </html>
