--- a/aplication/templates/admin/admin_start_page.html
+++ b/aplication/templates/admin/admin_start_page.html
@@ -43,6 +43,27 @@
                 color: white;
             }
 
+            .button {
+                border: none;
+                color: white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                transition-duration: 0.4s;
+                cursor: pointer;
+                background-color: #f1f1f1; 
+                color: black; 
+                border: 0px solid rgb(80, 80, 80);
+                }
+                
+            .button:hover {
+                background-color: rgb(80, 80, 80);
+                color: white;
+            }
+
         </style>
     </head>
 
@@ -63,6 +84,7 @@
                 <button class="button-big">Wyślij wiadomość</button>
             </a>
         </div>
+
 
     </body>
 </html>
