--- a/aplication/templates/customer/car_info.html
+++ b/aplication/templates/customer/car_info.html
@@ -77,6 +77,12 @@
                 margin-top: 5%;
             }
 
+            img {
+                border: 5px solid #f1f1f1;
+            }
+
+            .centered-and-cropped { object-fit: cover }
+
             
         </style>
     </head>
@@ -104,7 +110,7 @@
             <h1>$carname</h1>
 
             <div id="first" style="margin-left: 10%;">
-                <img src="carimage.png" width="600px" />
+                $image
             </div>
             <div id="seccond">
                 <table class="table_right">
